--- a/public/styles/patient_page.css
+++ b/public/styles/patient_page.css
@@ -13,30 +13,56 @@
     font-weight: lighter;
 }
 
+.bgFoto {
+    float: right;
+    position: absolute;
+    border-radius: 100%;
+    background:
+    top: 10px;
+    right: 10px;
+}
+
+.Patientenfoto {
+    position: relative;
+    top: 10px;
+    right: 10px;
+}
+
 .Hintergrund {
     float:left;
     width: 250px;
     height: 350px;
     background: #CC8C15;
+    opacity: 1;
 }
 
-.Hintergrund img {
-    width: 80px;
-    height: 120px;
+.Hintergrund img{
+    width: 170px;
+    height: 170px;
+    position: relative;
+    top: 7px;
+    left: 42px;
 }
 
 .Hintergrund button {
     font-family: the brooklyn;
-    text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     border-radius: 12px;
     background-color: aliceblue;
     cursor: pointer;
-    padding: 20px 20px;
-    position: absolute;
-    border: none;
-    top: 70%;
-    left: 1%;
+    position: relative;
+}
+
+#formular {
+    top: 48px;
+    left: 2px;
+    padding: 30px 43px;
+}
+
+#akte {
+    top: 48px;
+    left: 1px;
+    padding: 30px 34px;
 }
 
 #bgFormular {
