--- a/public/styles/patient_page.css
+++ b/public/styles/patient_page.css
@@ -17,22 +17,21 @@
     float: right;
     position: absolute;
     border-radius: 100%;
-    background:
+    background: #97C1AB;
     top: 10px;
     right: 10px;
 }
 
 .Patientenfoto {
     position: relative;
-    top: 10px;
-    right: 10px;
+    top: -7px;
+    right: 0px;
 }
 
 .Hintergrund {
     float:left;
     width: 250px;
     height: 350px;
-    background: #CC8C15;
     opacity: 1;
 }
 
@@ -62,7 +61,7 @@
 #akte {
     top: 48px;
     left: 1px;
-    padding: 30px 34px;
+    padding: 30px 35px;
 }
 
 #bgFormular {
@@ -71,6 +70,7 @@
     float: left;
     display: inline;
     margin-right: 20px;
+    background: #CC8C15;
 }
 
 #bgAkte {
@@ -79,6 +79,7 @@
     float: left;
     display: inline;
     margin-left:20px;
+    background: #3D9599;
 }
 
 .center{
