--- a/public/styles/beschwerde.css
+++ b/public/styles/beschwerde.css
@@ -1,3 +1,7 @@
+p {
+    font-family: the brooklyn;
+}
+
 .bg_überschrift {
     float:left;
     width: 358px;
@@ -15,4 +19,55 @@
     font-size: 22px;
     font-family: the brooklyn;
     font-weight: lighter;
+}
+
+#beschreibung {
+    position: absolute;
+    height: 200px;
+    width: 350px;
+    top: 12%;
+    left: 8%;
+}
+
+.bg_ankreuzen {
+    position: absolute;
+    width: 356px;
+    height: 100px;
+    background: #FECB6F;
+    top: 37%;
+    left: 8%;
+}
+
+#ja_1_check {
+    position: relative;
+    top: 50%;
+    left: 47%;
+    width: 50px;
+    height: 50px;
+}
+
+#nein_1_check {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 54%;
+}
+
+#ja_1_p {
+    position: relative;
+    top: -7%;
+    left: 45%;
+}
+
+#nein_1_p {
+    position: relative;
+    top: -42%;
+    left: 66%;
+}
+
+#ankreuzen_text {
+    position: relative;
+    top: 50%;
+    left: 50%;
 }
