--- a/public/styles/patient_anlegen_vitalparameter_style.css
+++ b/public/styles/patient_anlegen_vitalparameter_style.css
@@ -1,7 +1,7 @@
 .bottom_right {
     position: absolute;
-    bottom: 8px;
-    right: 16px;
+    bottom: 8em;
+    right: 16em;
 
 }
 
@@ -17,15 +17,15 @@
     margin-right: auto;
     width: 50%;
 
-    max-width: 10%;
-    max-height: 10%;
+    max-width: 10em;
+    max-height: 10em;
 }
 .oberkörper{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    max-width: 13%;
+    max-width: 18em;
     position:relative;
     top:-3px;
 }
@@ -34,26 +34,93 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    max-width: 8%;
-    position:relative;
-    top:-3px;
+    max-width: 8em;
+    position: relative;
+    top: -6em;
 }
 .rechte_hand {
-    position: relative;
-    top: -416px;
-    right: -781px;
-    height: 97px;
+    top: -416em;
+    right: -781em;
+    height: 97em;
 }
 .linke_hand{
     position: relative;
-    right: -955px;
-    top: -410px;
-    height: 102px;
+    right: -955em;
+    top: -410em;
+    height: 102em;
 }
 .notizblock{
     position: relative;
-    top: -848px;
-    right: -1331px;
-    height: 202px;
-    width: 365px;
+    right: -101em;
+    top: -49em;
+    height: 13em;
+
+}
+
+#gehirn{
+    position: relative;
+    top: -45em;
+    right: -2em;
+    height: 6em;
+ }
+
+ #herz{
+     position: relative;
+     top: -55em;
+     right: -23em;
+     height: 5.5em;
+ }
+ #lunge{
+     position: relative;
+     top: -47em;
+     right: -2em;
+     height: 5.5em;
+ }
+ #nieren{
+     position: relative;
+     right: -24em;
+     top: -56em;
+     height: 5.5em;
+ }
+#gehrindaten{
+    border-style: solid;
+    border-width: medium;
+    border-color: #A69376;
+    border-radius: 5px;
+    height: 45px;
+    position: relative;
+    top: -53em;
+    right: -1em;
+}
+
+#herzdaten{
+    border-style: solid;
+    border-width: medium;
+    border-color: #26B6C4;
+    border-radius: 5px;
+    height: 45px;
+    position: relative;
+    top: -64em;
+    right: -26em;
+}
+#lungendaten{
+    border-style: solid;
+    border-width: medium;
+    border-color: #26B6C4;
+    border-radius: 5px;
+    height: 45px;
+    position: relative;
+    top: -56em;
+    right: -1em;
+}
+
+#nierendaten{
+    border-style: solid;
+    border-width: medium;
+    border-color: #C54142;
+    border-radius: 5px;
+    height: 45px;
+    position: relative;
+    top: -67em;
+    right: -27em;
 }
