Html + Css Stylesheet für die Beschwerden Page

--- a/public/styles/beschwerde.css
+++ b/public/styles/beschwerde.css
@@ -14,7 +14,7 @@ p {
     left: 3em;
 }
 
-.bg_überschrift span {
+.bg_überschrift p {
     position: relative;
     left: 1em;
     font-size: 1.5em;
