Html + Css Stylesheet für die konto aktivieren page

--- a/public/styles/beschwerde.css
+++ b/public/styles/beschwerde.css
@@ -16,6 +16,7 @@ p {
 
 .bg_überschrift p {
     position: relative;
+    top: -1em;
     left: 1em;
     font-size: 1.5em;
     font-family: the brooklyn;
