random knöpfe action click on zeug

--- a/public/styles/konto_aktivieren.css
+++ b/public/styles/konto_aktivieren.css
@@ -51,3 +51,10 @@ p {
     height: 7em;
     width: 19em;
 }
+#pw_anlegen_button{
+    height: 9em;
+    position: relative;
+    top: 49em;
+    right: -84em;
+
+}
