--- a/public/styles/arzt_page_style.css
+++ b/public/styles/arzt_page_style.css
@@ -77,3 +77,45 @@ body {font-family: the brooklyn;}
     cursor: pointer;
     position: relative;
 }
+
+
+.dropbtn {
+    background-color: #97C1AB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    position: relative;
+    right: -110em;
+    top: 6em;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 15em;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    position: relative;
+    right: -110em;
+    top: 6em;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #CC8C15;}
