--- a/public/styles/arzt_page_style.css
+++ b/public/styles/arzt_page_style.css
@@ -38,7 +38,7 @@ body {font-family: the brooklyn;}
     position: relative;
 }
 #bgAnlegen {
-    top: 2%;
+    top: 8em;
     left: 2%;
     float: left;
     display: inline;
@@ -46,6 +46,7 @@ body {font-family: the brooklyn;}
     background: #CC8C15;
     width: 16em;
     height: 22em;
+    position: relative;
 }
 .Hintergrund img{
     width: 170px;
@@ -57,7 +58,7 @@ body {font-family: the brooklyn;}
 
 
 #bgAkte {
-    top: 5%;
+    top: 8em;
     left: 5%;
     float: left;
     display: inline;
@@ -65,6 +66,7 @@ body {font-family: the brooklyn;}
     background: #3D9599;
     height: 22em;
     width: 16em;
+    position: relative;
 }
 #akte{
     top: 3em;
@@ -79,38 +81,56 @@ body {font-family: the brooklyn;}
 }
 
 
+
+/* Style The Dropdown Button */
 .dropbtn {
-    background-color: #97C1AB;
+    background-color:#CC8C15;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
+    cursor: pointer;
+    right: -75em;
+    top: 4em;
     position: relative;
-    right: -110em;
-    top: 6em;
+    width: 8em;
 }
-
+/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
+/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 15em;
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    position: relative;
-    right: -110em;
-    top: 6em;
+    right: -74em;
+    top: 4em;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    right: 0;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3D9599;
 }
 
 
 
-.dropdown-content a:hover {background-color: #ddd;}
 
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #CC8C15;}
