--- a/public/styles/nutzer_anlegen.css
+++ b/public/styles/nutzer_anlegen.css
@@ -80,3 +80,13 @@ p {
     height: 7em;
     width: 19em;
 }
+
+.dropdown_geschlehter{
+    position: relative;
+    right: -21em;
+    background: #CC8C15;
+    color: white;
+    padding: 12px 16px;
+    font-size: 1em;
+    top: 2em;
+}
