--- a/public/styles/patientenakte_suchen_style.css
+++ b/public/styles/patientenakte_suchen_style.css
@@ -45,3 +45,12 @@ body {font-family: the brooklyn;}
     right: -21em;
     top: -17em;
 }
+.dropdown_geschlehter{
+    position: relative;
+    right: -30em;
+    background: #3D9599;
+    color: white;
+    padding: 12px 16px;
+    font-size: 1em;
+    top: -3em;
+}
