--- a/public/styles/patientenakte_suchen_style.css
+++ b/public/styles/patientenakte_suchen_style.css
@@ -45,7 +45,7 @@ body {font-family: the brooklyn;}
     right: -21em;
     top: -17em;
 }
-.dropdown_geschlehter{
+.dropdown_geschlechter{
     position: relative;
     right: -30em;
     background: #3D9599;
