--- a/public/patientenakte.hbs
+++ b/public/patientenakte.hbs
@@ -37,30 +37,33 @@
 
 
 <div class=" daten">
-    <p> {{Vorname}}</p>
-    <p> {{Nachname}}</p>
-    <p> {{Alter}}</p>
-    <p> {{Geschlecht}}</p>
-    <p> {{Email}}</p>
-    <p> {{Krankheit}}</p>
+    <p> {{vname}}</p>
+    <p> {{nname}}</p>
+    <p> {{alter}}</p>
+    <p> {{geschlecht}}</p>
+    <p> {{email}}</p>
+    <p> {{krankheit}}</p>
 </div>
 
->
 
 <div>
     <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
+    <p>{{EEG}} Hertz</p>
 </div>
 
 <div>
     <img src="resources/herz.png" id="herz" alt="Herz">
+    <p>{{EKG}} mm/s</p>
 </div>
 
 <div>
     <img src="resources/lungen.png" id="lunge" alt="Lunge">
+    <p>{{LVolumen}} mm³</p>
 </div>
 
 <div>
     <img src="resources/nieren.png" id="nieren" alt="Niere">
+    <p>{{GGT}} U/I</p>
 </div>
 </body>
 </html>
