--- a/public/styles/patientenakte_suchen_style.css
+++ b/public/styles/patientenakte_suchen_style.css
@@ -1,13 +1,15 @@
-body {font-family: the brooklyn;}
+body {font-family: the brooklyn;width: 98em;}
 #patientakte_suchen{
     max-width: 20em;
 }
 
 .bottom_right {
     position: relative;
-    bottom: -40em;
-    right: -125em;
+    bottom: -29em;
+    right: -112em;
     max-width: 20em;
+    border: none;
+    background: none;
 }
 
 #patienten_id{
@@ -47,7 +49,7 @@ body {font-family: the brooklyn;}
 }
 .dropdown_geschlechter{
     position: relative;
-    right: -30em;
+    right: -13em;
     background: #3D9599;
     color: white;
     padding: 12px 16px;
