--- a/public/patientenakte.hbs
+++ b/public/patientenakte.hbs
@@ -4,36 +4,35 @@
     <meta charset="UTF-8">
     <title>Patientenakte</title>
     <link href="styles/patientenakte.css" type="text/css" rel="stylesheet">
-    <script src="client.js"></script>
 </head>
 <body>
 <img src="resources/patientenakte.png" id="patientenakte" alt="Patientenakte Kategorie">
 
 
 
-<form action="arzt_page.html">
+<form action="arzt_page">
     <input type="image" id="schließen_button" src="resources/button_schließen_blau.png" alt="schließen button" class="bottom_right">
 </form>
 
 
+<div class="koerper">
+    <div>
 
-<div>
+        <button id="kopf"><img src="resources/kopf.png" style = "width: 10.5em;"/></button>
 
-    <button onclick="showBrain()" id="kopf"><img src="resources/kopf.png" style = "width: 10.5em;"/></button>
+    </div>
 
+    <div>
+
+        <button id="oberkörper" ><img src="resources/ober_mit_hand.png"style = "width: 17.5em;"/></button>
+
+    </div>
+
+    <div style= "height: 0em;">
+
+        <button id="beine"><img src="resources/beine.png" style=" width: 8em;"/></button>
+    </div>
 </div>
-
-<div>
-
-    <button onclick="showHerLun()" id="oberkörper" ><img src="resources/ober_mit_hand.png"style = "width: 17.5em;"/></button>
-
-</div>
-
-<div style= "height: 0em;">
-
-    <button onclick="showKidney()" id="beine"><img src="resources/beine.png" style=" width: 8em;"/></button>
-</div>
-
 
 
 <div class=" daten">
@@ -45,25 +44,30 @@
     <p> {{krankheit}}</p>
 </div>
 
+<div class="werte">
+    <div id="gehirn">
+        <img src="resources/gehirn.png"  alt="Gehirn">
+        <br>
+        <p id="GW">{{EEG}} Hertz</p>
+    </div>
 
-<div>
-    <img src="resources/gehirn.png" id="gehirn" alt="Gehirn">
-    <p>{{EEG}} Hertz</p>
-</div>
+    <div id="herz">
+        <img src="resources/herz.png" alt="Herz">
+        <br>
+        <p id="HW">{{EKG}} mm/s</p>
+    </div>
 
-<div>
-    <img src="resources/herz.png" id="herz" alt="Herz">
-    <p>{{EKG}} mm/s</p>
-</div>
+    <div id="lunge">
+        <img src="resources/lungen.png" id="lunge" alt="Lunge">
+        <br>
+        <p id="LW">{{LVolumen}} mm³</p>
+    </div>
 
-<div>
-    <img src="resources/lungen.png" id="lunge" alt="Lunge">
-    <p>{{LVolumen}} mm³</p>
-</div>
-
-<div>
-    <img src="resources/nieren.png" id="nieren" alt="Niere">
-    <p>{{GGT}} U/I</p>
+    <div id="nieren">
+        <img src="resources/nieren.png" id="nieren" alt="Niere">
+        <br>
+        <p id="NW">{{GGT}} U/I</p>
+    </div>
 </div>
 </body>
 </html>
