Doku ist glaube ich fertig. :D

--- a/public/arzt_page.hbs
+++ b/public/arzt_page.hbs
@@ -6,10 +6,10 @@
     <link href="./styles/arzt_page_style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+<!-- Startseite Arzt -->
 <div class="Arzt">
-    <strong>Prof. Dr. med. {{nname}}</strong>
-    <p>Fachbereich {{fachbereich}}</p>
+    <strong>Prof. Dr. med. {{nname}}</strong><!-- der jeweilige Name  des Arztes wird dynamisch generiert-->
+    <p>Fachbereich {{fachbereich}}</p> <!-- der jeweilige Fachbereich des Arztes wird dynamisch generiert-->
     <div class="bg_foto">
         <img class="Arztfoto" src="resources/arzt_face.png">
     </div>
