--- a/public/patient_page.hbs
+++ b/public/patient_page.hbs
@@ -6,8 +6,9 @@
     <link href="./styles/patient_page.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<!-- Startseite Patient-->
 <div class="Patient">
-    <strong>Herr {{vname}} {{nname}}</strong>
+    <strong>Herr {{vname}} {{nname}}</strong><!-- der jeweilige Vorname und Nacchname des Patienten wird dynamisch generiert-->
     <p>Patient</p>
     <div class="bgFoto">
         <img class="Patientenfoto" src="resources/alfredmüller.png">
